src/test/ui/error-codes/E0396.stderr
error[E0658]: dereferencing raw mutable pointers in constants is unstable
  --> $DIR/E0396.rs:3:28
   |
LL | const VALUE: u8 = unsafe { *REG_ADDR };
   |                            ^^^^^^^^^
   |
   = note: see issue #57349 <https://github.com/rust-lang/rust/issues/57349> for more information
   = help: add `#![feature(const_mut_refs)]` to the crate attributes to enable

error[E0658]: dereferencing raw mutable pointers in constant functions is unstable
  --> $DIR/E0396.rs:10:11
   |
LL |     match *INFALLIBLE {}
   |           ^^^^^^^^^^^
   |
   = note: see issue #57349 <https://github.com/rust-lang/rust/issues/57349> for more information
   = help: add `#![feature(const_mut_refs)]` to the crate attributes to enable

error[E0658]: dereferencing raw mutable pointers in constants is unstable
  --> $DIR/E0396.rs:13:36
   |
LL |     const BAD: () = unsafe { match *INFALLIBLE {} };
   |                                    ^^^^^^^^^^^
   |
   = note: see issue #57349 <https://github.com/rust-lang/rust/issues/57349> for more information
   = help: add `#![feature(const_mut_refs)]` to the crate attributes to enable

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0658`.
